--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,20 +8,29 @@
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
+
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <uses-feature android:name="android.hardware.camera.any" />
+
     <application
+        android:usesCleartextTraffic="true"
         android:allowBackup="true"
-        android:networkSecurityConfig="@xml/network_security_config"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/logo"
         android:label="UxerSii Punto Movil"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.UxerSiiPMChido"
         tools:targetApi="31">
+        <activity
+            android:name=".iapruebas"
+            android:exported="false" />
         <activity
             android:name=".ui.index.index"
             android:exported="false" />
@@ -38,7 +47,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label=""
-            android:theme="@style/Theme.UxerSiiPMChido.NoActionBar"></activity>
+            android:theme="@style/Theme.UxerSiiPMChido.NoActionBar" />
     </application>
 
 </manifest>
